# rmd_control

./: CMakeLists.txt  README.md  package.xml  typescript
include/: NumericalTool.h  TrajectoryGenerator.h  callback.h  dynamics.h  main.h  motor_controller.h  rmd_can.h  rmd_motor.h  ros_plot.h  shared_memory.h  spi2can.h
launch/: rmd_control.launch
msg/: CustomJointState.msg
scripts/: update_spi_rules
src/: NumericalTool.cpp  TrajectoryGenerator.cpp  callback.cpp  dynamics.cpp  main.cpp  motor_controller.cpp  rmd_can.cpp  rmd_motor.cpp  spi2can.cpp
vscode/: settings.json
